vlib/v/checker/tests/struct_embed_required_field_err.vv
struct Foo {
	foo u8 @[required]
	bar u8 @[required]
}

struct Bar {
	Foo
	foo u8 @[required]
}

fn main() {
	b := Bar{
		foo: 1
	}
	println(b)
}
